[package]
name = "greprs"
version = "0.1.0"
edition = "2021"
authors = ["Sangmin, Kang <ksmini82@gmail.com>"]
description = "A light weight grep replica."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0	# default value

[profile.release]
opt-level = 3	# default value